double scrollbar issue due to overlapping of content

--- a/blog.css
+++ b/blog.css
@@ -136,7 +136,7 @@ h6{
      }
      .text{
         width: 100%;
-        height: 100%;
+        
      }
 }
 
